k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-api-deployment
  namespace: production
  labels:
    app: rest-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rest-api
  template:
    metadata:
      labels:
        app: rest-api
    spec:
      containers:
      - name: rest-api
        image: ghcr.io/mustapha123450/devopspfe/my-rest-api:main
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
